--- a/assets/master.css
+++ b/assets/master.css
@@ -21,8 +21,6 @@ html {
 }
 
 body {
-  /*position: absolute;*/
-  /*top: 0;*/
   background-color: #FCFDFF;
   color: #28343F;
   margin: 0;
@@ -93,6 +91,9 @@ footer {
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   height: 50px;
+  position: relative;
+  bottom: -16px;
+  width: 100vw;
   justify-content: space-between;
   padding: 0 20px;
 }
@@ -225,8 +226,9 @@ h4 {
   align-items: center;
   background-color: #E8C905;
   box-sizing: border-box;
+  color: white;
   display: flex;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', serif;
   height: 14vw;
   justify-content: center;
   margin: 10px;
@@ -242,9 +244,10 @@ h4 {
   height: 14vw;
   position: absolute;
   z-index: 0;
+  filter: brightness(74%);
 }
 
-/*.program-card.red {
+.program-card.red {
   background-color: #bb1f26;
 }
 
@@ -253,8 +256,8 @@ h4 {
 }
 
 .program-card.black {
-  background-color: #28343F;
-}*/
+  background-color: #354554;
+}
 
 .program-card.clear div {
   z-index: 10;
