--- a/assets/master.css
+++ b/assets/master.css
@@ -159,19 +159,22 @@ footer img {
 }
 
 .home-quote {
-  font-style: italic;
-  width: 80%;
+  font-size: 2.7vw;
+  /*font-style: italic;*/
   margin: 0 auto;
   margin-top: 90px;
-  font-size: 2.7vw;
+  transform: skew(-6deg);
+  -webkit-transform: skew(-6deg);
+  width: 80%;
 }
 
 .home-quote-source {
-  font-style: normal;
   display: block;
   text-align: right;
   font-size: 22px;
   margin-top: 20px;
+  transform: skew(0deg);
+  -webkit-transform: skew(6deg);
 }
 
 
@@ -251,7 +254,11 @@ h4 {
   height: 14vw;
   position: absolute;
   z-index: 0;
-  filter: brightness(74%);
+  filter: brightness(94%);
+}
+
+.program-card.clear {
+  color: black;
 }
 
 .program-card.red {
@@ -302,7 +309,7 @@ h4 {
   background-color: #EFEFEF;
   box-sizing: border-box;
   max-height: 97%;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 30px;
   width: 40vw;
 }
@@ -312,6 +319,7 @@ h4 {
 }
 
 .description-title {
+  color: #bb1f26;
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -342,6 +350,18 @@ h4 {
 
 .description-link:hover {
   font-weight: bold;
+}
+
+.register-button {
+  background-color: white;
+  border-radius: 1px;
+  box-sizing: border-box;
+  color: #bb1f26;
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  margin-top: 20px;
+  padding: 12px 20px;
 }
 
 .programs-calendar {
