--- a/assets/master.css
+++ b/assets/master.css
@@ -15,6 +15,11 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   margin: 0;
   list-style: none;
@@ -95,17 +100,18 @@ header {
 footer {
   align-items: center;
   background-color: #bb1f26;
+  bottom: 0;
   box-sizing: border-box;
   color: #28343F;
   display: flex;
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   height: 50px;
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
   justify-content: space-between;
   padding: 0 20px;
+  position: fixed;
+  width: 100vw;
+  z-index: 10;
 }
 
 footer span {
@@ -166,7 +172,6 @@ footer img {
 
 .home-quote {
   font-size: 2.7vw;
-  /*font-style: italic;*/
   margin: 0 auto;
   margin-top: 90px;
   transform: skew(-6deg);
@@ -189,8 +194,9 @@ footer img {
 
 .page-title {
   color: #E8C905;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Open Sans', serif;
   font-size: 40px;
+  font-weight: 900;
   margin-bottom: 40px;
 }
 
@@ -199,10 +205,6 @@ footer img {
   font-family: 'PT Sans', sans-serif;
   font-size: 17px;
   font-weight: 400;
-  width: 88vw;
-}
-
-.page-body-narrow {
   width: 80vw;
 }
 
@@ -232,13 +234,13 @@ h4 {
 .programs-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .programs-grid {
   box-sizing: border-box;
-  width: 40vw;
-  height: 64vw;
+  width: 48%;
+  height: 600px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -250,20 +252,19 @@ h4 {
   color: white;
   display: flex;
   font-family: 'Open Sans', serif;
-  height: 14vw;
+  height: calc(24% - 20px);
   justify-content: center;
-  margin: 10px;
+  margin: 10px 20px 10px 0;
   text-align: center;
   vertical-align: top;
-  width: 18vw;
-  /*-webkit-transition: all 0.35s;
-  transition: all 0.35s;*/
+  width: 44%;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .programs-img {
-  width: 18vw;
-  height: 14vw;
-  position: absolute;
+  width: 100%;
+  height: 100%;
   z-index: 0;
   filter: brightness(94%);
 }
@@ -299,8 +300,8 @@ h4 {
 }
 
 .program-card-title {
-  font-size: 2.25vw;
-  margin: 0 7px;
+  font-size: 1.75vw;
+  margin: 0 10px;
 }
 
 .programs-info {
@@ -309,11 +310,11 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   font-size: 15px;
-  height: 64vw;
+  height: 592px;
   justify-content: center;
   align-items: flex-start;
   margin: 10px;
-  width: 40vw;
+  width: 48%;
 }
 
 .program-description {
@@ -382,23 +383,26 @@ h4 {
   width: 68vw;
 }
 
-/*
-image, black
-gold, red
-grey, black
-red, gold
-*/
 
-/*
-mobile will be single column and expand down
-*/
 
 
 
 /* CONTACT PAGE */
 
+.contact-grid {
+  display: flex;
+}
+
+.contact-grid-item {
+  width: 50%;
+}
+
 .contact-section {
   margin: 30px 0;
+}
+
+.contact-section:first-of-type {
+  margin-top: 0;
 }
 
 .contact-section span {
@@ -461,7 +465,8 @@ mobile will be single column and expand down
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px 0;
+  margin: 20px auto;
+  width: 94%;
 }
 
 .phil-grid img {
@@ -481,6 +486,12 @@ mobile will be single column and expand down
 
 /* STUDIO */
 
+.studio-greeting {
+  color: #bb1f26;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
 .group {
   margin-top: 22px;
   margin-bottom: 0;
@@ -496,6 +507,11 @@ mobile will be single column and expand down
   box-sizing: border-box;
   padding: 20px;
   width: 50%;
+}
+
+.studio-link {
+  color: #bb1f26;
+  font-weight: bold;
 }
 
 .page-nav-item {
