--- a/assets/master.css
+++ b/assets/master.css
@@ -54,43 +54,72 @@ body {
 /* HEADER */
 
 header {
-  font-family: 'Open Sans', sans-serif;
-  text-transform: uppercase;
-  position: fixed;
-  width: 100%;
-  height: 77px;
   background-color: #FCFDFF;
   border-bottom: 1px solid #DBDCDD;
+  display: flex;
+  font-family: 'Open Sans', sans-serif;
+  height: 77px;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
   z-index: 20;
 }
 
 .logo {
-  float: left;
+  height: 70px;
   padding-left: 10px;
   padding-top: 5px;
-  height: 70px;
 }
 
 .menu {
-  width: 80%;
-  min-width: 480px;
+  width: 44%;
+  min-width: 531px;
   margin: 26px 20px 0 0;
-  float: right;
   font-size: 20px;
   font-weight: 500;
   box-sizing: border-box;
   height: 24px;
 }
 
-.menu a {
+.menu-item {
   padding-right: 30px;
-  float: right;
-  -webkit-transition: all 0.35s;
-  transition: all 0.35s;
+  text-transform: uppercase;
+  transition: all 0.15s;
+  -webkit-transition: all 0.15s;
 }
 
-.menu a:hover {
+.menu-item:hover {
   color: #bb1f26;
+}
+
+.submenu-link:hover .submenu {
+  display: block;
+  opacity: 1;
+}
+
+.submenu-link:hover .menu-item {
+  color: #bb1f26;
+}
+
+.submenu:hover {
+  display: block;
+  opacity: 1;
+}
+
+.submenu {
+  display: none;
+  font-size: 14px;
+  position: absolute;
+  opacity: 0;
+}
+
+.submenu-item {
+  color: #bb1f26;
+  padding-right: 20px;
+}
+
+.submenu-item:hover {
+  color: #28343F;
 }
 
 
