reformat studio quotes & add dropdown menu to all pages

--- a/assets/master.css
+++ b/assets/master.css
@@ -567,6 +567,13 @@ h4 {
   z-index: 1;
 }
 
+.studio-quote-source {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 20px;
+  padding-top: 10px;
+}
+
 
 
 /* PHONE */
