--- a/assets/master.css
+++ b/assets/master.css
@@ -445,6 +445,10 @@ h4 {
   font-weight: bold;
 }
 
+.contact-diagram {
+  width: 350px;
+}
+
 
 
 
@@ -564,6 +568,7 @@ h4 {
   left: 0;
   position: absolute;
   text-align: center;
+  text-shadow: 2px 2px 2px black;
   top: calc(50% - 30px);
   width: 100%;
   z-index: 1;
