add map of friends

--- a/assets/master.css
+++ b/assets/master.css
@@ -707,3 +707,41 @@ h4 {
     float: right;
   }
 }*/
+
+
+
+
+.map-container {
+  font-size: 26px;
+}
+
+#map {
+  margin-bottom: 40px;
+  width: 80vw;
+  height: 56vh;
+}
+
+.marker {
+  background-image: url('images/mapbox-icon.png');
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.mapboxgl-popup {
+  max-width: 300px;
+}
+
+.map-marker-title {
+  font-size: 20px;
+  padding: 5px;
+  position: relative;
+  top: 4px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
