make philosophy responsive

--- a/assets/master.css
+++ b/assets/master.css
@@ -348,9 +348,9 @@ footer img {
 .page-body {
   margin: 0 auto;
   font-family: 'PT Sans', sans-serif;
-  font-size: 17px;
+  font-size: 13px;
   font-weight: 400;
-  width: 80vw;
+  width: 84vw;
 }
 
 .page-content {
@@ -375,6 +375,22 @@ h4 {
   .page-title {
     font-size: 40px;
     margin-bottom: 40px;
+  }
+
+  .page-body {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .page-title {
+    font-size: 40px;
+    margin-bottom: 40px;
+  }
+
+  .page-body {
+    font-size: 17px;
+    width: 80vw;
   }
 }
 
@@ -638,7 +654,7 @@ h4 {
 /* PHILOSOPHY / STUDIO */
 
 .page-section {
-  padding: 40px;
+  padding: 20px;
 }
 
 .page-section p {
@@ -660,8 +676,30 @@ h4 {
 
 .section-header {
   color: #bb1f26;
-  font-size: 26px;
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-bottom: 14px;
+}
+
+@media screen and (min-width: 550px) {
+  .page-section {
+    padding: 30px;
+  }
+
+  .section-header {
+    font-size: 23px;
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .page-section {
+    padding: 40px;
+  }
+
+  .section-header {
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
 }
 
 
@@ -673,7 +711,7 @@ h4 {
   color: #bb1f26;
   font-family: "Nothing You Could Do";
   font-weight: 300;
-  font-size: 22px;
+  font-size: 16px;
 }
 
 .phil-quote-source {
@@ -682,38 +720,34 @@ h4 {
 
 .phil-intro-grid {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .phil-intro-text {
-  width: 60%;
+  width: 100%;
 }
 
 .phil-intro-video {
-  width: 40%;
+  margin-bottom: 30px;
+  width: 100%;
 }
 
 .phil-grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px auto;
-  width: 94%;
+  margin: 0 auto;
+  width: 100%;
 }
 
-.phil-img-grid {
-  width: 200%;
+.phil-image-grid {
+  display: flex;
 }
 
 .phil-img {
   box-sizing: border-box;
-  padding: 25px 15px;
-  width: 24.5%;
-}
-
-.phil-grid img {
-  box-sizing: border-box;
   height: 100%;
-  padding: 20px;
+  padding: 10px 7px;
   width: 25%;
 }
 
@@ -724,6 +758,7 @@ h4 {
 .phil-video-section {
   display: flex;
   justify-content: space-around;
+  margin-top: 40px;
 }
 
 .phil-video {
@@ -743,6 +778,39 @@ h4 {
 
 .phil-video-attribution-image {
   width: 100%;
+}
+
+@media screen and (min-width: 550px) {
+  .phil-quote {
+    font-size: 19px;
+  }
+
+  .phil-intro-grid {
+    flex-wrap: nowrap;
+  }
+
+  .phil-intro-video {
+    float: right;
+    margin: 0 0 30px 30px;
+    width: 40%;
+  }
+
+  .phil-img {
+    box-sizing: border-box;
+    height: 100%;
+    padding: 25px 15px;
+    width: 25%;
+  }
+
+  .phil-video-section {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .phil-quote {
+    font-size: 22px;
+  }
 }
 
 
